fix slide-up layout on member cards, cards still not centered

--- a/assets/css/custom.css
+++ b/assets/css/custom.css
@@ -179,8 +179,8 @@ because the images look better in a wider container*/
 
 #members-title{
   text-transform: uppercase;
+  text-align: center;
 }
-
 
 .former-members{
   text-align: center;
@@ -202,11 +202,10 @@ because the images look better in a wider container*/
   box-shadow: 0 2px 5px 0 rgba(0, 0, 0, 0.16), 0 2px 10px 0 rgba(0, 0, 0, 0.12);
   display: inline-block;
   position: relative;
-  margin: 0.5rem 0 1rem 0;
+  margin: 0.5rem 3rem 2rem;
   background-color: #fff;
   transition: box-shadow .25s;
   border-radius: 2px;
-  margin: auto 2em;
 }
 
 .card .card-title {
@@ -326,7 +325,7 @@ span.card-title.divina{
   padding: 20px;
   position: absolute;
   background-color: #fff;
-  width: 100%;
+  width: inherit;
   overflow-y: auto;
   top: 100%;
   height: 90%;
